k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-gateway-admission-webhook
  labels:
    app: host-gateway-admission-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-gateway-admission-webhook
  template:
    metadata:
      labels:
        app: host-gateway-admission-webhook
    spec:
      serviceAccount: host-gateway-admission-webhook
      containers:
        - name: host-gateway-admission-webhook
          image: ghcr.io/sj26/host-gateway-admission-webhook
          imagePullPolicy: Always
