k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-gateway-admission-webhook
  labels:
    app: host-gateway-admission-webhook
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: host-gateway-admission-webhook
