k8s/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: host-gateway-admission-webhook
  labels:
    app: host-gateway-admission-webhook
  annotations:
    cert-manager.io/inject-ca-from: host-gateway-admission-webhook-certificate
webhooks:
  - name: host-gateway-admission-webhook.sj26.github.io
    admissionReviewVersions: ["v1"]
    clientConfig:
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ6RENDQTdTZ0F3SUJBZ0lVVU1SWGlPOFNHMmFwbENJQXpjN2ZnOWxhYitFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05URXpNREVHQTFVRUF3d3FhRzl6ZEMxbllYUmxkMkY1TFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTG1SbApabUYxYkhRdWMzWmpNQjRYRFRJMU1EWXhNREE1TURrMU5Gb1hEVE0xTURZd09EQTVNRGsxTkZvd05URXpNREVHCkExVUVBd3dxYUc5emRDMW5ZWFJsZDJGNUxXRmtiV2x6YzJsdmJpMTNaV0pvYjI5ckxtUmxabUYxYkhRdWMzWmoKTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUF0Vjd3eVJSQnNRNUVDOHJNSUZsbQpTeC8yVEl6STZleTRZeFp4 [...]
      service:
        name: host-gateway-admission-webhook
        namespace: default
        path: "/mutate"
        port: 443
    objectSelector:
      matchExpressions:
        - {
            key: app,
            operator: NotIn,
            values: [host-gateway-admission-webhook],
          }
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
